--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 /* Google Font CDN Link */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Ubuntu:wght@400;500;700&display=swap');
+
 * {
   margin: 0;
   padding: 0;
@@ -10,18 +11,21 @@
 
 /* Custom Scroll Bar CSS */
 ::-webkit-scrollbar {
-    width: 10px;
+  width: 10px;
 }
+
 ::-webkit-scrollbar-track {
-    background: #fcffff;
+  background: #fcffff;
 }
+
 ::-webkit-scrollbar-thumb {
-    background: linear-gradient(rgb(248, 65, 65), rgb(59, 130, 246), rgb(147, 51, 234));
-    border-radius: 50px;
-    transition: all 0.3s ease;
+  background: grey;
+  border-radius: 50px;
+  transition: all 0.3s ease;
 }
+
 /* navbar styling */
-nav{
+nav {
   position: fixed;
   width: 100%;
   padding: 30px 0;
@@ -30,62 +34,86 @@ nav{
   font-family: 'Ubuntu', sans-serif;
 
 }
-nav.sticky{
+
+nav.sticky {
   background: #393535;
   padding: 10px 0;
 }
-nav .navbar{
+
+nav .navbar {
   width: 90%;
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin: auto;
 }
-nav .navbar .logo a{
+
+nav .navbar .logo a {
   font-weight: 500;
   font-size: 35px;
   color: #130a0a;
+
 }
-nav.sticky .navbar .logo a{
-  color: rgb(0, 162, 255);
+
+nav .navbar .logo a {
+  font-weight: 500;
+  font-size: 35px;
+  color: #130a0a;
+  background: linear-gradient(90deg, hsla(328, 75%, 45%, 1) 0%, hsla(269, 85%, 41%, 1) 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  transition: all 0.3s ease;
 }
-nav .navbar .menu{
+
+nav.sticky .navbar .logo a {
+  color: linear-gradient(90deg, hsla(344, 97%, 63%, 1) 0%, hsla(232, 90%, 59%, 1) 100%);
+}
+
+nav .navbar .menu {
   display: flex;
   position: relative;
 }
-nav .navbar .menu li{
+
+nav .navbar .menu li {
   list-style: none;
   margin: 0 10px;
 }
-.navbar .menu a{
+
+.navbar .menu a {
   font-size: 18px;
   font-weight: 500;
   color: #000000;
   padding: 6px 0;
   transition: all 0.4s ease;
 }
-.navbar .menu a:hover{
-  color: #00ff00;
+
+.navbar .menu a:hover {
+  color: rgb(0, 128, 128);
 }
-nav.sticky .menu a{
+
+nav.sticky .menu a {
   color: #FFF;
 }
-nav.sticky .menu a:hover{
+
+nav.sticky .menu a:hover {
   color: #fc9f00;
 }
-.navbar .media-icons a{
+
+.navbar .media-icons a {
   color: #000000;
   font-size: 18px;
   margin: 0 6px;
 }
-nav.sticky .media-icons a{
+
+nav.sticky .media-icons a {
   color: #FFF;
 }
 
 
 /* Side Navigation Menu Button CSS */
 nav .menu-btn,
-.navbar .menu .cancel-btn{
+.navbar .menu .cancel-btn {
   position: absolute;
   color: #fff;
   right: 30px;
@@ -95,18 +123,21 @@ nav .menu-btn,
   transition: all 0.3s ease;
   display: none;
 }
-nav .menu-btn{
-  color: #4070f4;
+
+nav .menu-btn {
+  color: rgb(0, 68, 255);
 }
-nav.sticky .menu-btn{
-  color: #FFF;
+
+nav.sticky .menu-btn {
+  color: rgb(0, 68, 255);
 }
-.navbar .menu .menu-btn{
-  color: #fff;
+
+.navbar .menu .menu-btn {
+  color: rgb(0, 68, 255);
 }
 
 /* home section styling */
-.home{
+.home {
   height: 100vh;
   width: 100%;
   background: url("images/b13.jpg") no-repeat;
@@ -115,7 +146,8 @@ nav.sticky .menu-btn{
   background-attachment: fixed;
   font-family: 'Ubuntu', sans-serif;
 }
-.home .home-content{
+
+.home .home-content {
   width: 90%;
   height: 100%;
   margin: auto;
@@ -123,30 +155,36 @@ nav.sticky .menu-btn{
   flex-direction: column;
   justify-content: center;
 }
-.home .text-one{
+
+.home .text-one {
   font-size: 25px;
   color: #0E2431;
 }
-.home .text-two{
+
+.home .text-two {
   color: #0E2431;
   font-size: 75px;
   font-weight: 600;
   margin-left: -3px;
 }
-.home .text-three{
+
+.home .text-three {
   font-size: 40px;
   margin: 5px 0;
   color: #4070f4;
 }
-.home .text-four{
+
+.home .text-four {
   font-size: 23px;
   margin: 5px 0;
   color: #0E2431;
 }
-.home .button{
+
+.home .button {
   margin: 14px 0;
 }
-.home .button button{
+
+.home .button button {
   outline: none;
   padding: 8px 16px;
   border-radius: 6px;
@@ -158,42 +196,45 @@ nav.sticky .menu-btn{
   border: 2px solid transparent;
   transition: all 0.4s ease;
 }
-.home .button button:hover{
+
+.home .button button:hover {
   border-color: #000000;
   background-color: #fff;
   color: #000000;
 }
 
-/* About Section Styling */
-/* Those Elements Where We Have Apply Same CSS,
- I'm Selecting Directly 'Section Tag' and 'Class'  */
-section{
+section {
   padding-top: 20px;
 }
-section .content{
+
+section .content {
   width: 80%;
   margin: 40px auto;
   font-family: 'Poppins', sans-serif;
 }
-.about .about-details{
+
+.about .about-details {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-section .title{
+
+section .title {
   display: flex;
   justify-content: center;
   margin-bottom: 20px;
 }
-section .title span{
+
+section .title span {
   color: #200e31;
   font-size: 30px;
   font-weight: 600;
   position: relative;
   padding-bottom: 8px;
 }
+
 section .title span::before,
-section .title span::after{
+section .title span::after {
   content: '';
   position: absolute;
   height: 5px;
@@ -202,16 +243,19 @@ section .title span::after{
   left: 0;
   bottom: 0;
 }
-section .title span::after{
+
+section .title span::after {
   /* bottom: -7px; */
   width: 70%;
   left: 50%;
   transform: translateX(-50%);
 }
-.about .about-details .left{
+
+.about .about-details .left {
   width: 45%;
 }
-.about .left img{
+
+.about .left img {
   height: 450px;
   width: 350px;
   bottom: 50px;
@@ -219,26 +263,31 @@ section .title span::after{
   border-radius: 30px;
   -moz-box-shadow: 0 0 30px rgb(0, 0, 0);
   -webkit-box-shadow: 0 0 30px rgb(0, 0, 0);
-  box-shadow: 0 0 30px rgb(0, 0, 0);
+  box-shadow: 0 0 30px #f9238e;
 
 }
-.about-details .right{
+
+.about-details .right {
   width: 55%;
 }
-section  .topic{
+
+section .topic {
   color: #0E2431;
   font-size: 25px;
   font-weight: 500;
   margin-bottom: 10px;
 }
-.about-details .right p{
+
+.about-details .right p {
   text-align: justify;
   color: #0E2431;
 }
-section .button{
+
+section .button {
   margin: 16px 0;
 }
-section .button button{
+
+section .button button {
   outline: none;
   padding: 8px 16px;
   border-radius: 4px;
@@ -250,79 +299,64 @@ section .button button{
   cursor: pointer;
   transition: all 0.4s ease;
 }
-section .button button:hover{
+
+section .button button:hover {
   border-color: #5cee3f;
   background-color: #fff;
   color: #4070f4;
 }
 
- /* My Skills CSS */
- .skills{
-   background: #F0F8FF;
- }
- .skills .skills-details{
-   display: flex;
-   justify-content: space-between;
-   align-items: center;
- }
- .skills-details .text{
-   width: 20%;
-   text-align:left;
- }
- .skills-details p{
-   color: #0E2431;
-   text-align: left;
- }
-.skills .skills-details .experience{
-  display: flex;
-  align-items: center;
-  margin: 0 20px;
-  text-align: left;
-}
-.skills-details .experience .num{
-  color: #0E2431;
-  font-size: 80px;
-}
-.skills-details .experience .exp{
-  color: #0E2431;
-  margin-left: 50px;
-  font-size: 18px;
-  font-weight: 500;
-  margin: 0 6px;
-}
-.skills-details .boxes{
-  width: 75%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content:space-between ;
-}
-.skills-details .box{
-  width: calc(100% / 2 - 10px);
-  margin: 20px 0;
-  text-align: left;
-}
-.skills-details .boxes .topic{
-  font-size: 20px;
-  color: #0a020a;
+
+.skills {
+  margin: 20px;
+  padding: 20px;
+  border-radius: 8px;
 }
 
-.list-group{
-  box-shadow:#00ffff;
-  border-collapse: separate;
-  border-color: rgb(96, 97, 96);
-  border-radius: 30px;
-  border-style:outset;
+.title {
+  text-align: center;
+  font-size: 24px;
+  color: #000;
+}
+
+.topic {
+  font-weight: bold;
+}
+
+.boxeskills {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.boxs {
+  width: 200px;
+  padding: 15px;
+  border-radius: 20px;
+  margin: 10px;
+  text-align: center;
+  color: #000000;
+  background: linear-gradient(90deg, hsla(211, 96%, 62%, 1) 0%, hsla(295, 94%, 76%, 1) 100%);
+}
+
+progress {
+  width: 100%;
+  height: 10px;
+  margin-top: 8px;
+  appearance: none;
+  border: none;
+  color: #000;
+  border-radius: 10px;
 }
 
 /* Education */
-
-.services .boxes{
+.services .boxes {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-
 }
-.services .boxes .box{
+
+.services .boxes .box {
   margin: 20px 0;
   width: calc(100% / 3 - 20px);
   text-align: center;
@@ -332,14 +366,31 @@ section .button button:hover{
   cursor: default;
   transition: all 0.4s ease;
 }
-.services .boxes .box:hover{
-  background: rgb(1, 247, 103);
+
+.services .boxes .box::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  color: linear-gradient(90deg, hsla(339, 100%, 55%, 1) 0%, hsla(197, 100%, 64%, 1) 100%);
+  opacity: 0;
+  transition: opacity 0.4s ease;
+}
+
+.services .boxes .box:hover {
+  background: linear-gradient(90deg, hsla(211, 96%, 62%, 1) 0%, hsla(295, 94%, 76%, 1) 100%);
   color: rgb(0, 0, 0);
 }
-.services .boxes .box .icon{
+
+.services .boxes .box:hover::before {
+  opacity: 0.9;
+}
+
+.services .boxes .box .icon {
   height: 50px;
   width: 50px;
-  /* background: #4070f4; */
   background: linear-gradient(rgb(248, 65, 65), rgb(59, 130, 246), rgb(147, 51, 234));
   border-radius: 50%;
   text-align: center;
@@ -347,63 +398,73 @@ section .button button:hover{
   font-size: 18px;
   color: rgb(0, 0, 0);
   margin: 0 auto 10px auto;
-  transition: all 0.4s ease;
+  transition: background-color 0.4s ease, color 0.4s ease;
 }
-.boxes .box:hover .icon{
+
+.boxes .box:hover .icon {
   background-color: rgb(4, 50, 255);
   color: #000000;
+}
 
+.services .boxes .box .topic,
+.services .boxes .box p {
+  color: rgb(0, 0, 0);
+  transition: color 0.4s ease;
 }
+
 .services .boxes .box:hover .topic,
-.services .boxes .box:hover p{
+.services .boxes .box:hover p {
   color: #0E2431;
-  transition: all 0.4s ease;
 }
-.services .boxes .box:hover .topic,
-.services .boxes .box:hover p{
-  color: rgb(10, 10, 10);
-}
+
 /* Contact Me CSS */
-.contact{
+.contact {
   background: #F0F8FF;
 }
-.contact .content{
+
+.contact .content {
   margin: 0 auto;
   padding: 30px 0;
 }
-.contact .text{
+
+.contact .text {
   width: 80%;
   text-align: center;
   margin: auto;
 }
 
 /* Footer CSS */
-footer{
+footer {
   background: #4070f4;
   padding: 15px 0;
   text-align: center;
   font-family: 'Poppins', sans-serif;
 }
-footer .text span{
+
+footer .text span {
   font-size: 17px;
   font-weight: 400;
   color: #fff;
 }
-footer .text span a{
+
+footer .text span a {
   font-weight: 500;
   color: #FFF;
 }
-footer .text span a:hover{
+
+footer .text span a:hover {
   text-decoration: underline;
 }
+
 /* Scroll TO Top Button CSS */
-.scroll-button a{
+.scroll-button a {
   position: fixed;
   bottom: 20px;
   right: 20px;
   color: #fff;
   background: #4070f4;
-  padding: 7px 12px;;
+  padding: 7px 12px;
+  ;
   font-size: 18px;
   border-radius: 6px;
   box-shadow: rgba(0, 0, 0, 0.15);
@@ -412,41 +473,47 @@ footer .text span a:hover{
 
 /* Responsive Media Query */
 @media (max-width: 1190px) {
-  section .content{
+  section .content {
     width: 85%;
   }
 }
+
 @media (max-width: 1000px) {
-  .about .about-details{
+  .about .about-details {
     justify-content: center;
     flex-direction: column;
   }
-  .about .about-details .left{
+
+  .about .about-details .left {
     display: flex;
     justify-content: center;
     width: 100%;
   }
-  .about-details .right{
+
+  .about-details .right {
     width: 90%;
     margin: 40px 0;
   }
-  .services .boxes .box{
+
+  .services .boxes .box {
     margin: 20px 0;
     width: calc(100% / 2 - 20px);
   }
 }
+
 @media (max-width: 900px) {
-  .about .left img{
+  .about .left img {
     height: 400px;
     width: 400px;
   }
 }
 
 @media (max-width: 750px) {
-  nav .navbar{
+  nav .navbar {
     width: 90%;
   }
-  nav .navbar .menu{
+
+  nav .navbar .menu {
     position: fixed;
     left: -100%;
     top: 0;
@@ -459,98 +526,146 @@ footer .text span a:hover{
     align-items: center;
     transition: all 0.5s ease;
   }
-  .navbar.active .menu{
+
+  .navbar.active .menu {
     left: 0;
   }
-  nav .navbar .menu a{
+
+  nav .navbar .menu a {
     font-size: 23px;
     display: block;
     color: #fff;
     margin: 10px 0;
   }
-  nav.sticky .menu a:hover{
+
+  nav.sticky .menu a:hover {
     color: #70a0a3;
   }
-  nav .navbar .media-icons{
+
+  nav .navbar .media-icons {
     display: none;
   }
+
   nav .menu-btn,
-  .navbar .menu .cancel-btn{
+  .navbar .menu .cancel-btn {
     display: block;
   }
-  .home .text-two{
+
+  .home .text-two {
     font-size: 65px;
   }
-  .home .text-three{
+
+  .home .text-three {
     font-size: 35px;
   }
-  .skills .skills-details{
+
+  .skills .skills-details {
     align-items: center;
     justify-content: center;
     flex-direction: column;
   }
-  .skills-details .text{
+
+  .skills-details .text {
     width: 100%;
     margin-bottom: 50px;
   }
-  .skills-details .boxes{
+
+  .skills-details .boxes {
     justify-content: center;
     align-items: center;
     width: 100%;
   }
-  .services .boxes .box{
+
+  .services .boxes .box {
     margin: 20px 0;
     width: 100%;
   }
-  .contact .text{
+
+  .contact .text {
     width: 100%;
-}
+  }
 }
 
-@media (max-width: 800px){
-  .home .text-two{
+@media (max-width: 800px) {
+  .home .text-two {
     font-size: 60px;
   }
-  .home .text-three{
+
+  .home .text-three {
     font-size: 33px;
   }
-  .skills-details .boxes .per{
+
+  .skills-details .boxes .per {
     font-size: 50px;
     color: #4070f4;
   }
 }
-.cert .list-group{
-  border-color: #2dff03;
-  padding: 10px 10px;
-  
-}
-.list-group{
-  border-width: 5px;
-  border-style: outset;
-  border-radius: 30px;
+
+.cert .boxes {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-top: 100px;
+  min-height: 20vh;
+
 }
 
-.projects .boxes{
+.cert .boxes .box {
+  min-height: 30vh;
+  margin-top: 20px;
+  margin-right: auto;
+  margin-bottom: 20px;
+  margin-left: auto;
+  width: calc(200% / 2 - 200px);
+  text-align: center;
+  border-radius: 50px;
+  padding: 30px 10px;
+  box-shadow: 0 0 30px rgb(147, 51, 234);
+  cursor: default;
+  transition: all 0.4s ease;
+}
+
+.cert .boxes .box:hover {
+  background: linear-gradient(90deg, hsla(192, 96%, 50%, 1) 0%, hsla(65, 92%, 54%, 1) 100%);
+  color: rgb(0, 0, 0);
+}
+
+.cert .boxes .box:hover .topic,
+.cert .boxes .box:hover p {
+  color: #0E2431;
+  transition: all 0.4s ease;
+}
+
+.cert .boxes .box:hover .topic,
+.cert .boxes .box:hover p {
+  color: rgb(10, 10, 10);
+}
+
+
+.projects .boxes {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
 
 }
-.projects .boxes .box{
+
+.projects .boxes .box {
   margin: 20px 0;
   width: calc(300% / 3 - 20px);
   text-align: center;
   border-radius: 50px;
   padding: 30px 10px;
-  box-shadow: 0 0 30px rgb(246, 130, 59);
+  box-shadow: 0 0 25px rgb(40, 246, 68);
   cursor: default;
   transition: all 0.4s ease;
 }
-.projects .boxes .box:hover{
-  background: rgb(186, 44, 242);
+
+.projects .boxes .box:hover {
+  background: linear-gradient(90deg, hsla(211, 96%, 62%, 1) 0%, hsla(295, 94%, 76%, 1) 100%);
   color: rgb(0, 0, 0);
 }
-.projects .boxes .box .icon{
+
+.projects .boxes .box .icon {
   height: 50px;
   width: 50px;
   background: #ff2525;
@@ -562,21 +677,24 @@ footer .text span a:hover{
   margin: 0 auto 10px auto;
   transition: all 0.4s ease;
 }
-.boxes .box:hover .icon{
-  background-color: rgb(4, 50, 255);
+
+.boxes .box:hover .icon {
+  background-color: rgb(85, 208, 232);
   color: #000000;
 }
+
 .projects .boxes .box:hover .topic,
-.projects .boxes .box:hover p{
+.projects .boxes .box:hover p {
   color: #0E2431;
   transition: all 0.4s ease;
 }
+
 .projects .boxes .box:hover .topic,
-.projects .boxes .box:hover p{
+.projects .boxes .box:hover p {
   color: rgb(10, 10, 10);
 }
 
-.but{
+.but {
   background-color: #00cbda;
   border: none;
   padding: 15px 32px;
@@ -586,7 +704,8 @@ footer .text span a:hover{
   font-size: 16px;
   border-radius: 15px;
 }
-.ach h4{
+
+.ach h4 {
   border-style: outset;
   border-radius: 50px;
   border-color: #00cbda;
@@ -594,13 +713,15 @@ footer .text span a:hover{
   text-align: center;
   padding: 10px 10px;
 }
-.exp .boxes{
+
+.exp .boxes {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
 
 }
-.exp .boxes .box{
+
+.exp .boxes .box {
   margin: 20px 0;
   width: calc(200% / 2 - 20px);
   text-align: center;
@@ -610,11 +731,13 @@ footer .text span a:hover{
   cursor: default;
   transition: all 0.4s ease;
 }
-.exp .boxes .box:hover{
-  background: rgb(0, 255, 106);
-  color: rgb(0, 0, 0);
+
+.exp .boxes .box:hover {
+  background: linear-gradient(90deg, hsla(154, 100%, 76%, 1) 0%, hsla(234, 100%, 83%, 1) 50%, hsla(288, 100%, 81%, 1) 100%);
+  transition: all 0.4s ease;
 }
-.exp .boxes .box .icon{
+
+.exp .boxes .box .icon {
   height: 50px;
   width: 50px;
   /* background: #ff2525; */
@@ -627,64 +750,71 @@ footer .text span a:hover{
   margin: 0 auto 10px auto;
   transition: all 0.4s ease;
 }
-.boxes .box:hover .icon{
+
+.boxes .box:hover .icon {
   background-color: rgb(4, 50, 255);
   color: #000000;
 }
+
 .exp .boxes .box:hover .topic,
-.exp .boxes .box:hover p{
+.exp .boxes .box:hover p {
   color: #0E2431;
   transition: all 0.4s ease;
 }
+
 .exp .boxes .box:hover .topic,
-.exp .boxes .box:hover p{
+.exp .boxes .box:hover p {
   color: rgb(10, 10, 10);
 }
-.align{
-  text-align:justify;
-}
-.topic{
-  
-  font-size: xx-large;
-}
-.fon{
-  font-size: large;
-}
-.two{
+
+.align {
   text-align: justify;
 }
 
+.topic {
 
+  font-size: xx-large;
+}
 
+.fon {
+  font-size: large;
+}
 
+.two {
+  text-align: justify;
+}
 
-.ach .boxes{
+.ach .boxes {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
 
 }
-.ach .boxes .box{
+
+.ach .boxes .box {
   margin: 20px 0;
   width: calc(300% / 3 - 20px);
   text-align: center;
   border-radius: 50px;
   padding: 30px 10px;
-  box-shadow: 0 0 30px rgb(246, 130, 59);
+  box-shadow: 0 0 25px rgb(128, 0, 128);
   cursor: default;
   transition: all 0.4s ease;
 }
-.ach .boxes .box:hover{
-  background: rgb(101, 233, 248);
+
+.ach .boxes .box:hover {
+  background: linear-gradient(90deg, hsla(277, 79%, 84%, 1) 0%, hsla(204, 95%, 77%, 1) 100%);
   color: rgb(0, 0, 0);
+  transition: all 0.4s ease;
 }
 
 .ach .boxes .box:hover .topic,
-.ach .boxes .box:hover p{
+.ach .boxes .box:hover p {
   color: #0E2431;
   transition: all 0.4s ease;
 }
+
 .ach .boxes .box:hover .topic,
-.ach .boxes .box:hover p{
+.ach .boxes .box:hover p {
   color: rgb(10, 10, 10);
 }
